RESOLVED FIXED282038
Compilation error due to ambiguous serializationForCSS() in ColorSerialization.cpp
https://bugs.webkit.org/show_bug.cgi?id=282038
Summary Compilation error due to ambiguous serializationForCSS() in ColorSerializatio...
Bartosz Moczulski
Reported 2024-10-24 03:40:41 PDT
Created attachment 473031 [details] Fix proposal With UnifiedSources `--max-bundle-size` set to 16 it is possible that BifurcatedGraphicsContext.cpp is bundled in a single compilation unit with ColorSerialization.cpp, in which case StyleColor.h will become unintentionally included in the latter file. StyleColor.h contains additional overload of `serializationForCSS()` function which may be ambiguous with the static one defined locally in ColorSerialization.cpp. In one place in ColorSerialization.cpp implicit conversion was used so far to call the static version of this function. Fix proposal (attached): add explicit conversion to disambiguate the two overloads.
Attachments
Fix proposal (3.94 KB, patch)
2024-10-24 03:40 PDT, Bartosz Moczulski
emw: review+
ews-feeder: commit-queue-
Fix proposal (amended to conform to style requirements) (4.20 KB, patch)
2024-11-06 05:35 PST, Bartosz Moczulski
no flags
Radar WebKit Bug Importer
Comment 1 2024-10-31 03:41:13 PDT
Elliott Williams
Comment 2 2024-11-05 11:38:44 PST
Comment on attachment 473031 [details] Fix proposal Seems reasonable. Thank you for the fix!
EWS
Comment 3 2024-11-05 11:40:28 PST
No reviewer information in commit message, blocking PR #None. Details: [Build #1948](https://ews-build.webkit.org/#/builders/27/builds/1948)
Elliott Williams
Comment 4 2024-11-05 11:48:50 PST
Ah, would you mind updating your patch's commit message to follow WebKit's template? The template should be configured by default in git repositories once you've run `Tools/Scripts/git-webkit setup`. You can also copy it manually from <https://github.com/WebKit/WebKit/blob/main/.github/pull_request_template.md#template>. That template will contain a "Reviewed by NOBODY" line which the bot will update with proper reviewed-by information as it is merged. Contributions via GitHub PR are also welcome, see <https://github.com/WebKit/WebKit/wiki/Contributing#setup> for details. Lastly, please fix the style violation before we land this. It looks like it wants you to add spaces before and after the brackets.
Bartosz Moczulski
Comment 5 2024-11-06 05:35:46 PST
Created attachment 473151 [details] Fix proposal (amended to conform to style requirements)
EWS
Comment 6 2024-11-06 10:49:27 PST
Committed 286227@main (387ee066cbef): <https://commits.webkit.org/286227@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473151 [details].
Note You need to log in before you can comment on or make changes to this bug.